--- a/app/main/views/main/main.html
+++ b/app/main/views/main/main.html
@@ -6,6 +6,7 @@
     <div class="header">
       <ul class="nav nav-pills pull-right">
         <:nav href="/">Home</:nav>
+        <:nav href="/todos">Todos</:nav>
         <:nav href="/about">About</:nav>
         <:user_templates:menu />
       </ul>
