--- a/app/main/views/main/todos.html
+++ b/app/main/views/main/todos.html
@@ -7,7 +7,9 @@
   <table class="todo-table">
     {{ page._todos.each do |todo| }}
       <tr>
-        <td>{{ todo._name }}</td>
+        <td><input type="checkbox" checked="{{ todo._completed }}" /></td>
+        <td class="{{ if todo._completed }}complete{{ end }}">{{ todo._name }}</td>
+        <td><button e-click="todo.destroy">X</button></td>
       </tr>
     {{ end }}
   </table>
