--- a/app/main/views/main/main.html
+++ b/app/main/views/main/main.html
@@ -6,11 +6,10 @@
     <div class="header">
       <ul class="nav nav-pills pull-right">
         <:nav href="/">Home</:nav>
-        <:nav href="/todos">Todos</:nav>
         <:nav href="/about">About</:nav>
         <:user_templates:menu />
       </ul>
-      <h3 class="text-muted">simple_public_timeline</h3>
+      <h3 class="text-muted">Simple Public Timeline</h3>
     </div>
 
     <:volt:notices />
