--- a/app/main/views/main/index.html
+++ b/app/main/views/main/index.html
@@ -5,7 +5,7 @@
   <h1>Recent Public Tweets</h1>
   <h2>What everyone on Twitter is talking about!</h2>
 
-  <table class="todo-table">
+  <table class="tweet-table">
     {{ page._tweets.each do |tweet| }}
       <tr>
         <td>{{ tweet._text }}</td>
