--- a/app/main/views/main/index.html
+++ b/app/main/views/main/index.html
@@ -8,7 +8,13 @@
   <table class="tweet-table">
     {{ page._tweets.each do |tweet| }}
       <tr>
-        <td>{{ tweet._text }}</td>
+        <td>
+          <img src="{{ tweet._pic_url }}"> 
+          <a href="http://www.twitter.com/{{ tweet._username }}" target="_blank">{{ tweet._username }}</a> <br>
+          {{ tweet._text }} <br>
+          {{ tweet._time }} 
+          {{ raw(tweet._device) }} <br>
+        </td>
       </tr>
     {{ end }}
   </table>
